--- a/1-2-rest-api/package.json
+++ b/1-2-rest-api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "convert-csv-to-json": "^1.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.22"
   }
 }
